# xeve

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
cmake/: XEVEConfig.cmake.in
inc/: xeve.h
src_base/: CMakeLists.txt  xeve_eco.c  xeve_thread_pool.c  xeve_util.c
src_main/: CMakeLists.txt  xevem_eco.c
